@@ -14,6 +14,9 @@ Changes
 Fixes
 -----
 
+ - show all nodes in admin ui shard view, even those which 
+   have no shards.
+
  - Fixed an issue that cause the statusbar to show an error
    if the user has an adblocker enabled. 
 
